samples/_failures_safe/1761537763_49e806_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9bb429b.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
